# Recordings

./: .gitignore  README.md  live_audio_recording.py  mov_audio_recording.py  test.wav.txt
audio/: Cargo.toml
audio/src/: database_health.py  main.rs
audio/src/audio/: mod.rs
audio/src/error/: mod.rs
audio/src/parsing/: db.rs  google_docs.py  helper.rs  mod.rs  prompts.rs
