[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
hound = "3.4.0"
reqwest = { version = "0.11", features = ["json"]}
serde = {version = "1.0", features =["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
rusqlite = "0.29.0"
shell-escape = "0.1.5"

